--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   carousel_slider: ^4.2.1
   intl: ^0.18.1
   font_awesome_flutter: ^10.4.0
+  firebase_core: ^2.13.1
+  provider: ^6.0.5
+  cloud_firestore: ^4.8.0
 
 
 dev_dependencies:
@@ -64,8 +67,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
