--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   cloud_firestore: ^4.8.0
   animations: ^2.0.7
   drop_cap_text: ^1.1.3
+  flutter_html: ^2.2.1
 
 
 dev_dependencies:
