--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   animations: ^2.0.7
   drop_cap_text: ^1.1.3
   flutter_html: ^2.2.1
+  cached_network_image: ^3.2.3
 
 
 dev_dependencies:
