--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,9 +43,10 @@ dependencies:
   provider: ^6.0.5
   cloud_firestore: ^4.8.0
   animations: ^2.0.7
-  drop_cap_text: ^1.1.3
   flutter_html: ^2.2.1
   cached_network_image: ^3.2.3
+  path_provider: ^2.0.14
+  hive: ^2.2.3
 
 
 dev_dependencies:
@@ -58,6 +59,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: '>=2.3.0 <4.0.0'
+  hive_generator: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
