--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,8 @@ dependencies:
   cached_network_image: ^3.2.3
   path_provider: ^2.0.14
   hive: ^2.2.3
+  rxdart: ^0.27.7
+  hive_flutter: ^1.1.0
 
 
 dev_dependencies:
