--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.5 <3.0.0'
+  sdk: '>=3.0.0 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -42,8 +42,8 @@ dependencies:
   provider: ^6.0.5
   cloud_firestore: ^4.8.0
   animations: ^2.0.7
-  flutter_html: ^2.2.1
-  cached_network_image: ^3.2.3
+  flutter_html: ^3.0.0-beta.2
+  cached_network_image: 
   path_provider: ^2.0.14
   hive: ^2.2.3
   rxdart: ^0.27.7
